src/test/ui/parser/issue-102806.stderr
error: expected `..`, found `...`
  --> $DIR/issue-102806.rs:10:26
   |
LL |     let _ = V3 { z: 0.0, ...v};
   |                          ^^^
   |
help: use `..` to fill in the rest of the fields
   |
LL |     let _ = V3 { z: 0.0, ..v};
   |                          ~~

error: expected identifier, found `...`
  --> $DIR/issue-102806.rs:13:26
   |
LL |     let _ = V3 { z: 0.0, ... };
   |             --           ^^^ expected identifier
   |             |
   |             while parsing this struct

error: expected `..`, found `...`
  --> $DIR/issue-102806.rs:17:26
   |
LL |     let _ = V3 { z: 0.0, ...Default::default() };
   |                          ^^^
   |
help: use `..` to fill in the rest of the fields
   |
LL |     let _ = V3 { z: 0.0, ..Default::default() };
   |                          ~~

error[E0063]: missing fields `x` and `y` in initializer of `V3`
  --> $DIR/issue-102806.rs:10:13
   |
LL |     let _ = V3 { z: 0.0, ...v};
   |             ^^ missing `x` and `y`

error[E0063]: missing fields `x` and `y` in initializer of `V3`
  --> $DIR/issue-102806.rs:13:13
   |
LL |     let _ = V3 { z: 0.0, ... };
   |             ^^ missing `x` and `y`

error[E0063]: missing fields `x` and `y` in initializer of `V3`
  --> $DIR/issue-102806.rs:17:13
   |
LL |     let _ = V3 { z: 0.0, ...Default::default() };
   |             ^^ missing `x` and `y`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0063`.
